--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@expo/ngrok": "^4.1.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.7",
     "@react-native-masked-view/masked-view": "0.2.6",
@@ -15,6 +16,7 @@
     "csv-writer": "^1.6.0",
     "expo": "~45.0.0",
     "expo-sensors": "~11.3.0",
+    "globally": "^0.0.0",
     "jest": "^26.6.3",
     "link": "^1.5.0",
     "native-base": "^3.4.7",
@@ -45,6 +47,7 @@
     "react-native-share": "^7.6.6",
     "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^12.4.0",
+    "react-native-universal-picker": "^1.1.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-wavy-background": "^0.2.0",
     "react-native-web": "0.17.7",
