--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "globally": "^0.0.0",
     "jest": "^26.6.3",
     "link": "^1.5.0",
+    "mocha": "^10.0.0",
     "native-base": "^3.4.7",
     "node-csv": "^0.1.2",
     "react": "17.0.2",
