--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "accordion-collapse-react-native": "^1.1.1",
     "background": "^0.3.3",
     "bull": "^4.2.0",
+    "chai": "^4.3.6",
     "csv-writer": "^1.6.0",
     "expo": "~45.0.0",
     "expo-sensors": "~11.3.0",
     "globally": "^0.0.0",
-    "jest": "^26.6.3",
     "link": "^1.5.0",
+    "mocha": "^10.0.0",
     "native-base": "^3.4.7",
     "node-csv": "^0.1.2",
     "node-fetch": "^3.2.10",
@@ -60,12 +61,13 @@
     "@babel/core": "~7.9.0"
   },
   "scripts": {
-    "test": "jest",
+    "test": "mocha",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
-  "private": true
+  "private": true,
+  "type": "module"
 }
